# candc-svc

./: .env.sample  README.md  pyproject.toml  sonar-project.properties  wsgi.py
.ci/: Dockerfile
app/: __init__.py
app/configs/: cache_cfg.py  database_cfg.py  lazy_cfg_loader.py  log_cfg.py
app/configs/db/: database_cfg.py  dev_cfg.py  prod_cfg.py  test_cfg.py
app/const/: __init__.py  envs.py  lazy_load.py
app/core/: api.py  app_cache.py  cache.py  limiter.py
app/docs/: cache_clear.yml  cache_keys.yml  health.yml
app/error/: bad_arg_exc.py  bad_model_exc.py  custom_exc.py  handler.py  handler_api.py
app/models/: database.py  models.py  schemas.py  swagger.py
app/routes/: __init__.py  cache.py  cache_bp.py  health.py
app/routes/models/: __init__.py  crud.py  crud_blueprint.py  money.py  money_bp.py
app/service/: cache_service.py  money_spend_service.py
app/templates/: base.html  table.html
automation/: automation.py  config.py  constants.py
automation/assertions/: model_verifier.py  rest.py
automation/decorators/: api_validator.py
automation/features/: config.py  constants.py  health.feature  model.feature  money.feature
automation/steps/: health_step.py  model_step.py  money_step.py
dev_tools/: c&c-endpoints.json
migrations/: env.py
migrations/versions/: 144f0cb82b1c_is_special_not_null_constraint.py  2ecec6aba723_intermediate_tables_has_been_added.py  3caac7606c52_including_audit_fields.py  4e25a67d2e40_initial_db.py  74147848bb10_add_target_air_unit_and_base_defense_.py  8a6c21847fa6_is_special_should_be_available_for_each_.py  d87943ac79b1_not_null_restrict_to_certain_fields.py
tests/: conftest.py  test_cache_route.py  test_cache_service.py  test_crud_route.py  test_health_route.py  test_helper.py  test_money_route.py  test_money_spend_service.py
tests/routes/: test_cache_route.py  test_crud_route.py  test_health_route.py  test_money_route.py
tests/service/: test_cache_service.py  test_money_spend_service.py
(+16 files in other folders)
