[tool.poetry]
name = "candc-svc"
version = "0.1.0"
description = ""
authors = ["gal16v8d"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
flask-migrate = "^4.0.5"
flask-bootstrap = "^3.3.7.1"
flask-caching = "^2.0.2"
flask-limiter = "^3.5.0"
flasgger = "^0.9.7.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
