[tool.poetry]
name = "candc-svc"
version = "0.1.0"
description = ""
authors = ["gal16v8d"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
flask-migrate = "^4.0.5"
flask-caching = "^2.0.2"
flask-limiter = "^3.5.0"
flask-bootstrap = "^3.3.7.1"
sqlmodel = "^0.0.12"
flask-restx = "^1.3.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pylint = "^3.1.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
requests = "^2.31.0"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
